--- a/Practice/HW7/css/width760.css
+++ b/Practice/HW7/css/width760.css
@@ -21,6 +21,10 @@
 
     /*HEADER*/
 
+    .header {
+        max-width: 768px;
+    }
+
     .header__logo {
         margin-left: 1.3%;
     }
@@ -88,6 +92,7 @@
     /*ABOUT COMPANY*/
     .about_company {
         justify-content: space-around;
+        max-width: 768px;
     }
 
     .info_block {
@@ -144,13 +149,18 @@
         margin-top: 13px;
         margin-left: 5.5%;
         margin-right: -3.75%;
-        width: 100%;
+        width: 41.5%;
     }
 
     .pingbuller__info_block {
         width: 100%;
         margin: 87px 0  20px -2%;
         padding: 1px 0 40px 11.5%;
+    }
+
+    .pingbuller__info_block:after {
+       content: '';
+       bottom: 0;
     }
 
     .pingbuller__title {
@@ -177,8 +187,8 @@
 
     /*RECENT UPDATES*/
     .recent_updates {
-
-        padding-top: 125px;
+        width: 57.25%;
+        padding-top: 128px;
     }
 
         .recent_updates__title {
@@ -189,12 +199,14 @@
         }
 
         .recent_updates__post {
+            white-space: normal;
+            padding-left: 15.5%;
             margin-left: 19%;
-            margin-bottom: -3px;
+            margin-bottom: -27px;
         }
 
         .recent_updates__post:nth-child(3) {
-            margin-bottom: 18px;
+            margin-bottom: -6px;
         }
 
         .recent_updates__link {
@@ -247,7 +259,7 @@
         }
 
         .news_categories {
-           width: 100%;
+            width: 100%;
             max-width: 768px;
             padding-top: 101px;
         }
