--- a/Practice/HW7/css/width320.css
+++ b/Practice/HW7/css/width320.css
@@ -5,6 +5,14 @@
     }
 
     /*HEADER*/
+
+    .header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        max-width: 320px;
+    }
+
     .overlay {
         display: none;
     }
@@ -14,145 +22,182 @@
     }
 
     .slider {
-        padding-left: 22px;
-        margin-bottom: 65px;
+        margin: 162px 0 65px;
+        padding: 0;
     }
 
-    .slider__switch {
-        margin-top: 130px;
-        padding-left: 29.125%;
+    .slider__wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
+
+    .slider__text {
+        float: none;
+        margin: 0 0 0 6%;
+        padding: 0;
+    }
+
+   .slider__description {
+        white-space: nowrap;
+   }
+
+   .slider__switch {
+         margin: 77px 0 0 5.5%;
+         padding: 0;
+         width: 43%;
+   }
+
+   .switch__bullet {
+         margin-right: 3%;
+   }
 
    /*ABOUT COMPANY*/
 
     .about_company {
-        padding-bottom: 42px;
+        margin-bottom: 42px;
+        padding: 0;
+        max-width: 320px;
     }
 
     .info_block {
         margin-top: 70px;
-        padding-left: 16.1875%;
+        padding-left: 15.5%;
         width: 82.8%;
-        background-position: -98px -1px;
+        background-position: -96px 4px;
     }
 
-    .info_block:nth-child(3) {
-        margin-top: 18px;
-    }
+     .info_block:nth-child(2) {
+         padding-left: 15.5%;
+         background-position: -61px -27px;
+     }
 
-    .about_company__link {
-       margin-left: 76.6%;
-    }
+     .info_block:nth-child(3) {
+         margin-top: 18px;
+         padding-left: 15.5%;
+         background-position: -14px -67px;
+     }
+
+     .about_company__link,
+     .info_block:nth-child(2) .about_company__link,
+     .info_block:nth-child(3) .about_company__link {
+         margin-left: 76.6%;
+     }
+
+
 
     /*Блок pingbuller*/
-    .avatar {
-        top: 17px;
-        left: -10%;
+
+    .news {
+        max-width: 320px;
     }
 
     .pingbuller__info_block {
         width: 84.5%;
-        margin-top: 70px;
-        margin-left: 12%;
+        margin: 70px 0 0 12%;
         padding: 1px 0 29px 11.25%;
+        }
+
+    .avatar {
+        top: 17px;
+        left: -10.5%;
     }
 
     .pingbuller__title {
         display: block;
-        font-size: 24px;        
+        font-size: 24px;
     }
 
     .pingbuller__title--description {
-        display: block;
-        font-size: 24px;        
-        margin-top: -1px;
+         display: block;
+         font-size: 24px;
+         margin-top: -1px;
+         margin-left: 0;
     }
 
     .pingbuller__summary {
-        margin-top: 4px;
-        margin-left: 1.8%;
-        padding-right: 11%;
+         margin-top: 4px;
+         margin-left: 1.8%;
+         padding-right: 11%;
     }
 
     .pingbuller__switch {
-        margin-top: 23px;
-        margin-left: 44%;
+         margin-top: 23px;
+         margin-left: 44%;
     }
 
     .switch__bullet--theme--light {
-    margin-right: 0;
+         margin-right: 0;
     }
 
 /*RECENT UPDATES*/
     .recent_updates {
-        padding-top: 47px;
+        padding-top: 44px;
     }
 
     .recent_updates__title {
-        margin-bottom: 19px;
         margin-left: 3.5%;
-    }
-    .hidden {
-        visibility: hidden;
     }
 
     .recent_updates__post {
-        	
         margin-left: 4%;
         padding-left: 21.5%;
         margin-bottom: 16px;
     }
 
     .recent_updates__post:nth-child(3) {
-        margin-bottom: 24px;
+        margin-top: 17px;
+        margin-bottom: 23px;
     }
 
     .recent_updates__link {
+        margin-top: 0;
         margin-left: 65.5%;        
     }
 
     /*BANNERS*/
-    .banners__wrapper {
-        width: 85% ;
-        margin-bottom: 16px;
-        padding-top: 52px;
+
+    .banners {
+        display: block;
+        margin-top: 17px;
+        margin-bottom: 63px;
+        max-width: 320px;
     }
 
     .banners__item {
-        margin-bottom: 61px;
+        margin: 0;
+        padding: 0;
     }
 
     .banner1 {
-        margin-left: 21%;
-        margin-right: 0;
+        margin: 0 0 0 17.5%;
     }
 
     .banner2 {
-        margin-left: 21.75%;
-        margin-right: 0;
+        margin: 0 0 58px 18%;
     }
 
     .banner3 {
-        margin-left: 24.5%;
+        margin-left: 20%;
     }
 
     .banner4 {
-        margin-left: 25.5%;
-        margin-right: 0;
+        margin: 0 0 60px 21.5%;
     }
 
     .banner5 {
-        margin-left: 13.5%;
-
-        margin-top: 2px;
+        margin: 2px 0 0 10.5%;
     }
 
     .banner6 {
-        margin-top: -19px;
-        margin-left: ;
+        margin: -19px 0 0 19%;
+    }
+
+    .footer {
+        padding: 0;
     }
 
     .footer__summary {
-        margin: 39px 0 144px;
+        margin: 39px 0 127px;
     }
 }
