--- a/Practice_2020/HW3_bonus/css/style.css
+++ b/Practice_2020/HW3_bonus/css/style.css
@@ -1,9 +1,11 @@
 body {
     background-color: #282828;
+    font-family: Tahoma;
+    color: #e6e6e6;
 }
 .main_page {
     margin: 0 auto;
-    width: 960px;
+    width: 955px;
     min-height: 883px;
     background: url("../img/background.jpg") no-repeat;
 }
@@ -17,6 +19,7 @@ header {
 }
 
 .logo {
+    margin-bottom: -2px;
     width: 266px;
     height: 147px;
     background: url("../img/logo.png") no-repeat;
@@ -28,7 +31,6 @@ header {
     justify-content: flex-end;
     padding-bottom: 16px;
     color: #e6e6e6;
-    font-family: Tahoma;
     font-size: 8.5px;
 }
 
@@ -36,4 +38,38 @@ header {
     font-size: 10px;
     font-weight: bold;
     margin-bottom: 5px;
+}
+
+.countries_list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.countries_item {
+    margin-bottom: 50px;
+    text-align: center;
+}
+
+.countries_link {
+    color: inherit;
+    text-decoration: none;
+    font-size: 15px;
+}
+
+.countries_img {
+    border-radius: 2%;
+    border-style: solid;
+    border-width: 5px 5px 6px 6px;
+    -moz-border-image: url("../img/countries_frame.png") 5 5 6 6 stretch repeat;
+    -webkit-border-image: url("../img/countries_frame.png") 5 5 6 6 stretch repeat;
+    -o-border-image: url("../img/countries_frame.png") 5 5 6 6 stretch repeat;
+    border-image: url(../img/countries_frame.png) 5 5 6 6 stretch repeat;
+}
+
+footer {
+    margin-top: 100px;
+    margin-bottom: 30px;
+    text-align: center;
+    font-size: 10px;
 }
