--- a/Practice_2020/HW4/css/style.css
+++ b/Practice_2020/HW4/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .main_page {
-    margin: 0 auto;
+    margin: 19px auto 0;
     padding-top: 10px;
     width: 1000px;
     background-color: white;
@@ -13,7 +13,7 @@ body {
 header {
     display: flex;
     justify-content: space-between;
-    margin-top: 10px;
+    margin: 10px 0;
     padding: 0 30px;
     color: #128aa7;
 }
@@ -56,6 +56,49 @@ header {
     margin: 0 auto;
     width: 40px;
 }
-.submenu {
+
+/*CONTENT*/
+
+.content__image {
+    width: inherit;
+    height: 237px;
+    border-top: 1px solid #128aa7;
+    border-bottom: 1px solid #128aa7;
+    background: url("../img/content__image.jpg");
+}
+
+.content__main_menu {
+    padding: 8px 0 10px;
+    background: #333333;
+    border-bottom: 1px solid black;
+}
+
+.content__main_menu__list {
+    display: flex;
+    justify-content: space-around;
+    color: white;
+}
+
+.content__main_menu__link {
+    position: relative;
+    font-size: 14px;
+    color: inherit;
+    text-decoration: none;
+}
+
+.arrow_down:after {
+    content: '';
+    position: absolute;
+    top: 40%;
+    right: -10px;
+    background: url("../img/content__arrow_down.png");
+    width: 5px;
+    height: 6px;
+}
+.countries_link {
+
+}
+
+.content__main_menu__submenu {
     display: none;
 }
