--- a/Practice_2020/HW4/css/style.css
+++ b/Practice_2020/HW4/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background: url("../img/background.jpg");
+    background: #0c739f url("../img/background.jpg") repeat-x;
 }
 
 .main_page {
@@ -8,55 +8,6 @@ body {
     width: 1000px;
     background-color: white;
 }
-
-/*HEADER*/
-header {
-    display: flex;
-    justify-content: space-between;
-    margin: 10px 0;
-    padding: 0 30px;
-    color: #128aa7;
-}
-
-.header__logo {
-    width: 283px;
-    height: 164px;
-    background: url("../img/header_logo.png");
-}
-
-.header__contacts {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    margin-bottom: 35px;
-    font-size: 12px;
-}
-
-.header__contacts__contact_us {
-    font-weight: bold;
-}
-
-.header__menu__list {
-    display: flex;
-    justify-content: space-between;
-    width: 325px;
-}
-
-.header__menu__item {
-    display: flex;
-    text-align: center;
-}
-
-.header__menu__link {
-    color: inherit;
-    font-size: 10px;
-
-}
-.header__menu__image {
-    margin: 0 auto;
-    width: 40px;
-}
-
 /*CONTENT*/
 
 .content__image {
@@ -67,38 +18,79 @@ header {
     background: url("../img/content__image.jpg");
 }
 
-.content__main_menu {
-    padding: 8px 0 10px;
-    background: #333333;
-    border-bottom: 1px solid black;
+.clearfix:after {
+    content: "";
+    display: block;
+    clear: both;
 }
 
-.content__main_menu__list {
-    display: flex;
-    justify-content: space-around;
-    color: white;
-}
-
-.content__main_menu__link {
+.fon1 {
+    width: 100%;
+    background: #edeef0;
+    float: left;
     position: relative;
+    right: 58%;
+
+    border-right: 1px solid #c7cacf;
+}
+
+.fon2 {
+    width: 100%;
+    background: #fff;
+    float: left;
+    position: relative;
+    right: 21%;
+
+    border-right: 1px solid #c7cacf;
+}
+
+.fon3 {
+    width: 100%;
+    background: #edeef0;
+    float: left;
+    overflow: hidden;
+}
+
+.content__sidebar {
+    width: 21%;
+    float: left;
+    overflow: hidden;
+    position: relative;
+    left: 79%;
+
+    padding: 15px;
+}
+
+.content {
+    width: 58%;
+    float: left;
+    overflow: hidden;
+    position: relative;
+    left: 79%;
+
+    padding: 15px;
+}
+
+.content__news {
+    width: 21%;
+    float: left;
+    overflow: hidden;
+    position: relative;
+    left: 79%;
+
+    padding: 15px;
+}
+
+.content__text {
+    font-family: Tahoma;
     font-size: 14px;
-    color: inherit;
-    text-decoration: none;
+    line-height: 24px;
 }
 
-.arrow_down:after {
-    content: '';
-    position: absolute;
-    top: 40%;
-    right: -10px;
-    background: url("../img/content__arrow_down.png");
-    width: 5px;
-    height: 6px;
-}
-.countries_link {
-
-}
-
-.content__main_menu__submenu {
-    display: none;
+.content__title {
+    font-size: 18px;
+    font-weight: bold;
+    font-family: Tahoma;
+    text-align: center;
+    color: #424c43;
 }
